[package]
name = "appmancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3.0", features = ["derive", "string"] }
tokio = { version = "1.26", features = ["full"] }
log = "0.4.20"
colored = "2.0.4"
crossterm = "0.27.0"
tempfile = "3.8.1"
